[metadata]
name = raspy-cal
version = 1.0.1
author = Daniel Philippus
author_email = daniel@dphilippus.com
description = A HEC-RAS automatic calibration application
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/quantum-dan/raspy-cal
project_urls = 
	Bug Tracker = https://github.com/quantum-dan/raspy-cal/issues
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Operating System :: Microsoft :: Windows

[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.6
install_requires = 
	pyrasfile
	pywin32
	raspy-auto
	scipy
	HydroErr
	matplotlib
	platypus-opt

[options.packages.find]
where = src

[egg_info]
tag_build = 
tag_date = 0

